# vram-fabric

./: .gitignore  PRD.md  README.md  artigo-linkedin-vram-fabric.html  pyproject.toml
configs/: fabric.yaml
examples/: basic_usage.py  multi_agent.py
src/vram_fabric/: __init__.py  __main__.py  config.py
src/vram_fabric/api/: routes.py
src/vram_fabric/core/: fabric.py  types.py
src/vram_fabric/engines/: agent_runtime.py  cache_engine.py  vector_engine.py
src/vram_fabric/memory/: pool.py
src/vram_fabric/scheduler/: dynamic.py
src/vram_fabric/telemetry/: __init__.py
tests/: test_agent_runtime.py  test_cache_engine.py  test_integration.py  test_memory_pool.py  test_scheduler.py  test_vector_engine.py
